frontend/test/should_pass/dpo_005.grg
dpo rule r {
	x:Node --> y:Node;
	y --> y;
	y --> y;
	z:Node;

	replace {
	}
}

