frontend/test/should_fail/reuse_006.grg
rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	negative {
		x-e-y;
		z:Node;
	}

	replace{
	}
}
